--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,27 @@
 asgiref==3.8.1
 Brotli==1.1.0
+certifi==2025.4.26
+charset-normalizer==3.4.2
 click==8.1.8
 colorama==0.4.6
 dj-database-url==2.3.0
 Django==5.1.4
 django-jalali==7.3.0
+dotenv==0.9.9
 gunicorn==23.0.0
 h11==0.14.0
+idna==3.10
 jalali_core==1.0.0
 jdatetime==5.1.0
 packaging==24.2
 pillow==11.0.0
 psycopg2==2.9.10
 psycopg2-binary==2.9.10
+python-dotenv==1.1.0
+requests==2.32.3
 sqlparse==0.5.3
 typing_extensions==4.13.0
 tzdata==2024.2
+urllib3==2.4.0
 uvicorn==0.34.0
 whitenoise==6.9.0
